Kubernetes/py_flask_mysql_app/deployment/app_deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      run: app-deployment
  template:
    metadata:
      labels:
        run: app-deployment
    spec:
      containers:
      - name: app-container
        image: agill17/flask_mysql_app:latest
        ports:
        - name: app-port
          containerPort: 3000
        livenessProbe:
          successThreshold: 1
          failureThreshold: 1
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          timeoutSeconds: 10
      nodeSelector:
        provider: aws
        env: qa
