Kubernetes/py_flask_mysql_app/deployment/db_deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mysql
  template:
    metadata:
      labels:
        db: mysql
    spec:
      containers:
      - name: mysql-container
        image: mysql:5.7
        ports:
        - name: mysql-port
          containerPort: 3306
      nodeSelector:
        provider: aws
        env: dev
