Kubernetes/py_flask_mysql_app/deployment/app_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: py-mysql
spec:
  ports:
    - port: 80
      nodePort: 31002
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector: 
    run: app-deployment
