Kubernetes/py_flask_mysql_app/deployment/db_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  ports:
    - port: 3306
      targetPort: mysql-port
      protocol: TCP 
  selector: 
    db: mysql
