Kubernetes/py_flask_mysql_app/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  namespace: py-mysql
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"

spec:
  rules:
    - host: testapp.amritgill.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: app-svc
              servicePort: 80
